# astronomical-survey

./: README.md  Testing.ipynb  csill.cpp  csill.h  csill.py
C++/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  csill.cpp  csill.h  test.cpp
C++test/: CMakeLists.txt  test.cpp
Documentation/: icthesis.sty  thesis.aux  thesis.dvi  thesis.out  thesis.preamble.aux  thesis.preamble.tex  thesis.tex  thesis.toc
Documentation/Abstract/: abstract.tex
Documentation/Felkeszules/: felkeszules.tex
Documentation/Osszegzes/: osszegzes.tex
Documentation/Programozas/: programozas.tex
Python/: AstroNote.ipynb  Testing.ipynb  pi.py
Python/.ipynb_checkpoints/: AstroNote-checkpoint.ipynb  Testing-checkpoint.ipynb
python/: AstroNote.ipynb  _time.py  _utils.py  constants.py  coord-conversions.ipynb  csill.py  datetime-calculations.ipynb  geographic-distance.ipynb  utils.ipynb
